# Ontrackchain

./: .gitignore  Makefile  PRÓXIMAS_AÇÕES_IMEDIATAS.md  README.md  TACTICAL_ROADMAP_SPRINT_7_TO_95_PERCENT.md  render.frontend-only.yaml  render.full-stack.yaml  render.yaml  setup-governance-cicd.sh
.github/: GOVERNANCE_CICD_SETUP.md
ontrackchain/: .env.example  .env.oidc-local.example  .env.staging.example  Makefile  README.md  docker-compose.oidc-local.yml  docker-compose.yml  render.frontend-only.yaml  render.full-stack.yaml  render.yaml
ontrackchain/apps/auth-service/: Dockerfile  pyproject.toml
ontrackchain/apps/auth-service/src/auth_service/: main.py  pre_screening.py  secrets_loader.py
ontrackchain/apps/auth-service/tests/: test_role_canonicalization.py  test_secrets_loader.py  test_team_identity_linking.py
ontrackchain/apps/investigation-api/: Dockerfile  pyproject.toml
ontrackchain/apps/investigation-api/src/investigation_api/: main.py  rpc_provider.py  worker.py
ontrackchain/apps/investigation-api/src/investigation_api/config/: agent_concurrency.py
ontrackchain/apps/investigation-api/tests/: test_audit_logs.py  test_billing_balance.py  test_billing_rbac.py  test_billing_reconciliation.py  test_billing_reconciliation_extended.py  test_case_lifecycle.py  test_dlq_operations.py  test_internal_rpc_metrics.py  test_internal_worker_token.py  test_manual_package_seals.py  test_rpc_provider.py  test_rpc_provider_extended.py
ontrackchain/apps/public-api/: Dockerfile  pyproject.toml
ontrackchain/apps/public-api/src/public_api/: main.py
ontrackchain/apps/public-api/tests/: test_public_api_contracts.py
ontrackchain/apps/report-api/: Dockerfile  pyproject.toml
ontrackchain/apps/report-api/src/report_api/: main.py
ontrackchain/apps/report-api/tests/: test_report_list_helpers.py  test_report_rbac.py  test_strong_auth.py  test_strong_auth_extended.py
(+629 files in other folders)
