[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "ontrackchain-auth-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.1",
  "pyjwt[crypto]>=2.9.0",
  "pydantic-settings>=2.3.4",
  "psycopg[binary]>=3.2.1",
  "psycopg-pool>=3.2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/auth_service"]
