[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "ontrackchain-investigation-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.1",
  "pydantic-settings>=2.3.4",
  "psycopg[binary]>=3.2.1",
  "psycopg-pool>=3.2.2",
  "redis>=5.0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/investigation_api"]
